data/_debug/bf_20260519_0823.log
  File "/home/runner/work/product-dashboard/product-dashboard/scripts/product_okpos_backfill.py", line 126
    print(f'
          ^
SyntaxError: unterminated f-string literal (detected at line 126)
